# rotom_bot

./: .coveragerc  .dockerignore  .gitignore  .tool-versions  Dockerfile  Pipfile  README.md  package-lock.json  package.json  serverless.yml  setup.cfg
.devcontainer/: Dockerfile  bootstrap.fish  devcontainer.json  docker-compose.yml  initialize_command.sh  post_create_command.fish  post_start_command.fish
.devcontainer/phoenix_files/.aws/: config  credentials
.devcontainer/phoenix_files/.config/: starship.toml
.devcontainer/phoenix_files/.config/fish/: config.fish
.devcontainer/phoenix_files/.config/fish/completions/: devtools.fish
.devcontainer/phoenix_files/.config/nvim/: init.vim
.github/workflows/: aws_test.yml  publish-docker.yml  test.yml
aws_test_and_deploy/: __main__.py
backup_slack/: __main__.py  backup_message_notion.py  backup_messages.py
devtools/: __main__.py  setup.cfg  ssm_manager.py
devtools/devtools/: __main__.py  app.py  main_tasks.py  run_test_tasks.py  ssm_util.py  task_util.py  tasks.py
github-deploy-iam/: serverless.yml
handler/: backup_messages.py  bolt_test.py
localstack/: docker-compose.yml
localstack/localstack-apigateway/: serverless.yml
rotom_bot/: __main__.py  backup_message_notion.py
test/: test_aws_test_and_deploy.py  test_backup_message_notion.py  test_backup_messages.py  test_backup_slack.py  test_rotom_bot.py
