[metadata]
name = rotom_bot

[options]
packages = find:
install_requires =
    slack-bolt
    notion-client

[flake8]
ignore=E203, E266, E501, W503
max-line-length=88
max-complexity=18
select=B,C,E,F,W,T4
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,node_modules

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=devtools,handler,rotom_bot,test
exclude=build
ignore_missing_imports = True
strict_optional = True
show_error_codes = True
show_column_numbers = True
warn_no_return = True
# disallow_any_unimported = True

# Across versions of mypy, the flags toggled by --strict vary.  To ensure
# we have reproducible type check, we instead manually specify the flags
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
implicit_reexport = False
strict_equality = True

[tool:pytest]
testpaths=test

[pydocstyle]
convention = google
ignore = D415